# bondhu-ai

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
app/: config.py  database.py  main.py
app/api/v1/: auth.py
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  _base.py  admin.py  ai_request.py  auth.py  chat.py  chat_room.py  classroom.py  config_credit.py  credit.py  document_annotation.py  document_storage.py  individual.py  lesson_plan.py  parent.py  pdf_library.py  profile.py  progress.py  quiz.py  student.py  student_quiz_attempt.py  study_material.py  subscription.py  syllabus.py  system_config.py  teacher.py  transaction.py  user.py  user_privacy.py  user_relationships.py  user_roles.py  vector_migration.py
app/schemas/: admin.py  auth.py  base.py  individual.py  parent.py  profile.py  student.py  teacher.py  user.py  user_privacy.py
app/services/: privacy_service.py
docs/: architecture.txt  code_guide.txt  file_structure.txt  project details.txt  workflow.txt
migrations/: env.py  script.py.mako
scripts/: entrypoint.sh
